# ocaml_autoexamples

./: LICENSE  README.md  TODO.md  dune-project  ocaml_autoexamples.opam
lib/: collector.ml  dune  example.ml  example.mli  writer.ml  writer.mli
runner/: collector.ml  collector.mli  dune  example.ml  example.mli  writer.ml
src/: dune  ocaml_autoexamples.ml
test/: dune  ocaml_autoexamples_tests.ml  runner_tests.ml  test.ml
test/data/: trivial.ml
test/rewriter/: dune  rewriter_tests.expected.ml  rewriter_tests.ml
