(executable
 (name pp)
 (modules pp)
 (libraries ocaml_autoexamples ppxlib))

(rule
 (targets rewriter_tests.actual.ml)
 (deps
  (:pp pp.exe)
  (:input rewriter_tests.ml))
 (action
  (run ./%{pp} --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action
  (diff rewriter_tests.expected.ml rewriter_tests.actual.ml)))

(test
 (name rewriter_tests)
 (modules rewriter_tests)
 (preprocess
  (pps ocaml_autoexamples)))
